home page creation

--- a/src/components/ProductCard.module.css
+++ b/src/components/ProductCard.module.css
@@ -4,13 +4,7 @@
 }
 
 .categoryCard {
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    /* min-height: 20rem !important; */
+    box-shadow: none;
 }
 
 .productCardActions {
