--- a/src/pages/Products/CategoryProducts.module.css
+++ b/src/pages/Products/CategoryProducts.module.css
@@ -3,6 +3,8 @@
 }
 
 .search {
-    --background: rgb(240, 240, 240);
+    --background: #eee;
     --color: black;
+    --border-radius: 30px;
+    --box-shadow: none;
 }
