--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
+
+body{
+   font-family: 'Open Sans', sans-serif !important;
+}
+
+
 .w-full {
    width: 100%;
 }
@@ -29,6 +36,7 @@
 .title-large {
    font-weight: 600;
    color: var(--ion-color-primary);
+   font-size: 18px;
 }
 
 .flex {
