--- a/src/pages/Products/CartProducts.module.css
+++ b/src/pages/Products/CartProducts.module.css
@@ -29,3 +29,92 @@
     display: flex;
     flex-direction: column;
 }
+
+
+.mainhead{
+    font-weight: 400 !important;
+    color: #000 !important;
+    font-size: 16px !important;
+    padding: 0 10px !important;
+}
+
+.paymentlist{
+    padding: 12px;
+    border-bottom:1px solid #e8e8e8;
+}
+
+
+.paymentrow{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.paylogo img{
+    max-width: 50px;
+    width: 100%;
+}
+
+.paycontent{
+    display: flex;
+    flex-direction: column;
+    row-gap: 4px;
+
+}
+
+.paycontent ion-text:first-child{
+    font-weight: 600;
+    font-size: 12px;
+    width: 90px;
+    overflow: hidden; 
+  text-overflow: ellipsis; 
+  white-space: nowrap;
+}
+
+.paycontent ion-text:last-child{
+    color: #b4b4b4;
+    font-size: 10px;
+    letter-spacing: -0.2px;
+}
+
+.pricecontent ion-text:first-child{
+    font-weight: 600;
+    font-size: 15px;
+}
+
+.pricecontent ion-text:last-child{
+    color: #b4b4b4;
+    font-size: 10px;
+    letter-spacing: -0.2px;
+    text-decoration: line-through;
+}
+
+.pricecontent {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    row-gap: 4px;
+}
+
+.counteritem ion-button{
+    height: 15px;
+}
+
+.counteritem ion-icon{
+    width: 12px;
+}
+
+.counteritem{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 10px;
+    padding: 5px;
+    border-radius: 55px;
+    border: 1px solid #E9E9ED
+}
+
+
+
+
+
