--- a/src/pages/Products/Product.module.css
+++ b/src/pages/Products/Product.module.css
@@ -3,7 +3,6 @@
 }
 
 
-
 .categoryCard {
     display: flex;
     flex-direction: column;
@@ -69,7 +68,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    row-gap: 15px;
+    row-gap: 0px;
 }
 
 .titleNames{
@@ -94,6 +93,7 @@
     justify-content: center;
     font-size: 15px;
     text-wrap:balance;
+    column-gap: 10px;
 }
 
 .TextContent{
@@ -106,14 +106,21 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .chefbutton{
-    font-size: 10px;
+    height: 50px;
+}
+
+.chefbuttoninner{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 13px;
+    text-transform: capitalize;
+    column-gap: 10px;
+    font-weight: bold;
 }
 
 
@@ -170,9 +177,10 @@
 }
 
 .reviews{
-    padding: 15px;
+    padding: 10px;
     background-color: #f8f6f4;
     border-radius: 15px;
+    box-shadow: 2px 11px 52px -37px rgba(0,0,0,0.21);
 }
 
 .reviewcontainer{
@@ -184,3 +192,31 @@
     font-weight: 600;
     font-size: 16px;
 }
+
+.reply{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 5px;
+}
+
+.mainhead{
+    font-weight: 400 !important;
+    color: #000 !important;
+    font-size: 16px !important;
+    padding: 0 10px !important;
+}
+
+.report{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 5px;
+    font-size: 12px;
+    color: #9a1a0a;
+}
+
+.reviewbtn{
+    height: 50px;
+}
+
