--- a/src/pages/Products/Product.module.css
+++ b/src/pages/Products/Product.module.css
@@ -2,15 +2,10 @@
     --border-style: none;
 }
 
-
 .categoryCard {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
     text-align: center;
-    box-shadow: none !important;
+    box-shadow: none;
+    margin: 0;
 }
 
 .productCardActions {
@@ -88,11 +83,9 @@
 
 .raterp{
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    font-size: 15px;
-    text-wrap:balance;
+    justify-content: space-between;
+    font-size: 18px;
     column-gap: 10px;
 }
 
