--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -72,6 +72,7 @@ body {
 }
 
 .MainProductThumb {
+   display: flex;
    aspect-ratio: 1;
    object-fit: contain;
 }
@@ -283,6 +284,10 @@ ion-button.button-outline {
    flex-direction: column;
    gap: 10px;
    padding-top: 0px;
+}
+
+.divider5 {
+   border-bottom: 5px solid #f2f2f2;
 }
 
 /* Modal Popup */
@@ -632,7 +637,7 @@ ion-button.button-outline {
 
 .subCategory-titleBox {
    display: flex;
-   gap: 15px;
+   gap: 10px;
    align-items: center;
 }
 
@@ -647,12 +652,12 @@ ion-button.button-outline {
    border: 1px solid #ccc;
    border-radius: 15px;
    padding: 12px;
-   width: 70px;
-   height: 70px;
+   width: 65px;
+   height: 65px;
    display: flex;
    align-items: center;
    justify-content: center;
-   min-width: 70px;
+   min-width: 65px;
 }
 
 .subCate-details {
@@ -680,7 +685,47 @@ ion-button.button-outline {
    margin-left: auto;
 }
 
-.divider5 {
+.subCateTab {
    border-bottom: 5px solid #f2f2f2;
 }
+
+.subCateTab::-webkit-scrollbar {
+	height: 0;
+}
+
+.subCateTab ion-segment-button::part(native) {
+   padding: 16px;
+}
+
+.subCategoryCard {
+   width: 65px;
+   text-align: center;
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+}
+
+.subCategoryThumb {
+   width: 65px;
+   min-width: 65px;
+   height: 65px;
+   padding: 12px;
+   border: 1px solid #ccc;
+   border-radius: 15px;
+}
+
+.subCategoryTitle {
+   font-size: 14px;
+   text-transform: capitalize;
+   letter-spacing: 0;
+   white-space: normal;
+   overflow: hidden;
+   display: -webkit-box;
+   -webkit-line-clamp: 2;
+   -webkit-box-orient: vertical;
+   height: 32px;
+   color: #515151;
+}
+
+
 /* Sub Category Title end */
