--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -28,7 +28,9 @@ body {
 
 .IconBtn {
    width: 40px;
+   min-width: 40px;
    height: 40px !important;
+   --overflow: visible;
 }
 
 .IconBtn::part(native) {
@@ -48,7 +50,122 @@ body {
    border: 0;
 }
 
+.TabIcon {
+   width: 25px;
+   margin-bottom: 5px;
+}
+
 /* Footer end */
+
+/* Titles */
+
+.TitleHead {
+   padding: 16px;
+   display: flex;
+   align-items: center;
+   gap: 10px;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   white-space: nowrap;
+}
+
+.TitleHead ion-title {
+   font-weight: 600;
+   color: var(--ion-color-primary);
+   font-size: 18px;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   white-space: nowrap;
+   padding: 0;
+}
+
+.TitleHead ion-title.ion-color-dark {
+   color: var(--ion-color-dark);
+}
+
+/* Sub Category Title */
+
+.CategoryInfoTitle {
+   display: flex;
+   align-items: center;
+   gap: 15px;
+   overflow: hidden;
+}
+
+.subCate-thumb {
+   border: 1px solid #ccc;
+   border-radius: 15px;
+   padding: 12px;
+   width: 65px;
+   height: 65px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   min-width: 65px;
+}
+
+.subCate-details {
+   display: flex;
+   flex-direction: column;
+   gap: 5px;
+   text-overflow: ellipsis;
+   overflow: hidden;
+   white-space: nowrap;
+}
+
+.TitleHead .subCate-details ion-title {
+   color: var(--ion-color-dark);
+}
+
+.subCate-details span {
+   color: #666;
+}
+
+.subCateTab {
+   border-bottom: 5px solid #f2f2f2;
+}
+
+.subCateTab::-webkit-scrollbar {
+   height: 0;
+}
+
+.subCateTab ion-segment-button::part(native) {
+   padding: 16px;
+}
+
+.subCategoryCard {
+   width: 65px;
+   text-align: center;
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+}
+
+.subCategoryThumb {
+   width: 65px;
+   min-width: 65px;
+   height: 65px;
+   padding: 12px;
+   border: 1px solid #ccc;
+   border-radius: 15px;
+}
+
+.subCategoryTitle {
+   font-size: 14px;
+   text-transform: capitalize;
+   letter-spacing: 0;
+   white-space: normal;
+   overflow: hidden;
+   display: -webkit-box;
+   -webkit-line-clamp: 2;
+   -webkit-box-orient: vertical;
+   height: 32px;
+   color: #515151;
+}
+
+/* Sub Category Title end */
+
+/* Titles end */
 
 /* Product */
 
@@ -67,7 +184,7 @@ body {
 }
 
 .ProductThumb {
-   padding: 5px 25px 15px;
+   padding: 10px 25px;
    position: relative;
 }
 
@@ -119,13 +236,13 @@ body {
 }
 
 .ProductTitle {
-   font-size: 16px;
+   font-size: 14px;
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    text-align: left;
-   line-height: normal;
+   line-height: 18px;
 }
 
 .PriceRating {
@@ -247,48 +364,7 @@ body {
 
 /* Category Product end */
 
-/* Product */
-
-.header-md::after {
-   display: none;
-}
-
-ion-button {
-   margin: 0;
-   text-transform: capitalize;
-   font-weight: 600;
-}
-
-ion-button.button-outline {
-   --border-width: 1px;
-}
-
-.title-large {
-   font-weight: 600;
-   color: var(--ion-color-primary);
-   font-size: 18px;
-}
-
-.flex {
-   display: flex;
-}
-
-.TabIcon {
-   width: 25px;
-   margin-bottom: 5px;
-}
-
-.BoxContent {
-   text-align: left;
-   display: flex;
-   flex-direction: column;
-   gap: 10px;
-   padding-top: 0px;
-}
-
-.divider5 {
-   border-bottom: 5px solid #f2f2f2;
-}
+/* Product end */
 
 /* Modal Popup */
 
@@ -633,99 +709,40 @@ ion-button.button-outline {
 /* Modal Popup end */
 
 
-/* Sub Category Title */
+/* globle */
 
-.subCategory-titleBox {
-   display: flex;
-   gap: 10px;
-   align-items: center;
+.bottom-shadow {
+   box-shadow: 0 5px 0 #f2f2f2;
 }
 
-.CategoryInfo {
-   display: flex;
-   align-items: center;
-   gap: 10px;
-   overflow: hidden;
+.mr-auto {
+   margin-right: auto;
 }
 
-.subCate-thumb {
-   border: 1px solid #ccc;
-   border-radius: 15px;
-   padding: 12px;
-   width: 65px;
-   height: 65px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   min-width: 65px;
-}
-
-.subCate-details {
-   display: flex;
-   flex-direction: column;
-   gap: 5px;
-   text-overflow: ellipsis;
-   overflow: hidden;
-   white-space: nowrap;
-}
-
-.subCateTitle {
-   font-size: 20px;
-   font-weight: 600;
-   text-overflow: ellipsis;
-   overflow: hidden;
-   white-space: nowrap;
-}
-
-.subCate-details span {
-   color: #515151;
-}
-
-.FilterBtn {
+.ml-auto {
    margin-left: auto;
 }
 
-.subCateTab {
-   border-bottom: 5px solid #f2f2f2;
+.dark {
+   color: var(--ion-color-dark);
 }
 
-.subCateTab::-webkit-scrollbar {
-	height: 0;
+.header-md::after {
+   display: none;
 }
 
-.subCateTab ion-segment-button::part(native) {
-   padding: 16px;
-}
-
-.subCategoryCard {
-   width: 65px;
-   text-align: center;
-   display: flex;
-   flex-direction: column;
-   gap: 10px;
-}
-
-.subCategoryThumb {
-   width: 65px;
-   min-width: 65px;
-   height: 65px;
-   padding: 12px;
-   border: 1px solid #ccc;
-   border-radius: 15px;
-}
-
-.subCategoryTitle {
-   font-size: 14px;
+ion-button {
+   margin: 0;
    text-transform: capitalize;
-   letter-spacing: 0;
-   white-space: normal;
-   overflow: hidden;
-   display: -webkit-box;
-   -webkit-line-clamp: 2;
-   -webkit-box-orient: vertical;
-   height: 32px;
-   color: #515151;
+   font-weight: 600;
 }
 
+ion-button.button-outline {
+   --border-width: 1px;
+}
 
-/* Sub Category Title end */
+.flex {
+   display: flex;
+}
+
+/* globle end */
