--- a/src/pages/Products/Product.module.css
+++ b/src/pages/Products/Product.module.css
@@ -1,4 +1,4 @@
-.categoryCard {
+.ProductCard {
     text-align: center;
     box-shadow: none;
     margin: 0;
@@ -15,15 +15,35 @@
     gap: 5px;
 }
 
-.chefhatbtn{
-    max-width: 20px;
+.ProductInfo {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    gap: 10px;
+    font-weight: bold;
+    color: var(--ion-color-dark);
+    padding: 0;
 }
 
-.productCardHeader p {
-    font-size: 1.2rem;
-    padding: 0;
-    margin: 0;
-    margin-top: 0.75rem;
+.ProductInfo .cateName {
+    color: #9a1a0a;
+}
+
+.pTitle{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.pTitle ion-text {
+    font-size: 18px;
+    line-height: 24px;
+}
+
+.priceInfo ion-text {
+    font-size: 20px;
+    line-height: 24px;
 }
 
 .categoryCardContent {
@@ -31,6 +51,8 @@
     flex-direction: column;
     text-align: center;
 }
+
+
 
 .categoryCardContent ion-button {
     font-size: 0.8rem;
@@ -46,6 +68,7 @@
     display: flex;
     flex-direction: row;
 }
+
 .boxcontent{
     display: flex;
     flex-direction: column;
@@ -53,28 +76,6 @@
     row-gap: 0px;
 }
 
-.titleNames{
-    display: flex;
-    flex-direction: column;
-    text-align: start;
-    row-gap: 5px;
-    font-weight: bold;
-    
-    color: #000;
-}
-
-.titleNames span{
-    font-size: 14px;
-    color: #9a1a0a;
-}
-
-.raterp{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 18px;
-    column-gap: 10px;
-}
 
 .TextContent{
     display: flex;
@@ -90,89 +91,6 @@
     align-items: flex-end;
 }
 
-.chefbutton{
-    height: 50px;
-}
-
-.chefbuttoninner{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 13px;
-    text-transform: capitalize;
-    column-gap: 10px;
-    font-weight: bold;
-}
-
-
-.paylogo{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    height: 50px;
-    border: 1px solid #e8e8e8;
-    border-radius: 50%;
-    max-width: 50px !important;
-}
-
-.paymentlist{
-    padding: 12px;
-    border-bottom:1px solid #e8e8e8;
-}
-
-
-.paymentrow{
-    display: flex;
-    align-items: center;
-    column-gap: 15px;
-    padding: 10px;
-}
-
-.paylogo img{
-    max-width: 50px;
-    padding: 10px;
-    width: 100%;
-}
-
-.paycontent{
-    display: flex;
-    flex-direction: column;
-    row-gap: 5px;
-
-}
-
-.paycontent ion-text:first-child{
-    font-weight: 600;
-    font-size: 15px;
-}
-
-.paycontent ion-text:last-child{
-    color: #b4b4b4;
-    font-size: 12px;
-    letter-spacing: -0.2px;
-}
-
-.rating{
-    max-width: 90px;
-}
-
-.reviews{
-    padding: 10px;
-    background-color: #f8f6f4;
-    border-radius: 15px;
-    box-shadow: 2px 11px 52px -37px rgba(0,0,0,0.21);
-}
-
-.reviewcontainer{
-    padding: 10px;
-    row-gap: 15px;
-}
-
-.headingtext{
-    font-weight: 600;
-    font-size: 16px;
-}
 
 .reply{
     display: flex;
@@ -229,11 +147,6 @@
     background: #e6f6f1;
     font-size: 12px;
     line-height: normal;
-}
-
-.chefbuttonouter{
-    display: flex;
-    column-gap:16px;
 }
 
 .chefbuttonouter ion-button{
