--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -30,6 +30,7 @@ body {
    width: 40px;
    min-width: 40px;
    height: 40px !important;
+   min-height: auto;
    --overflow: visible;
 }
 
@@ -77,6 +78,7 @@ body {
    text-overflow: ellipsis;
    white-space: nowrap;
    padding: 0;
+   letter-spacing: 0;
 }
 
 .TitleHead ion-title.ion-color-dark {
@@ -281,6 +283,7 @@ body {
    display: flex;
    align-items: center;
    justify-content: space-between;
+   gap: 10px;
 }
 
 .OldPrice {
@@ -404,7 +407,7 @@ body {
 }
 
 .loginContainer .closeButton ion-icon {
-   fill: #8f1a1d;
+   fill: var(--ion-color-primary);
 }
 
 .loginContainer .title {
@@ -511,6 +514,7 @@ body {
 .btnGroup ion-button {
    margin: 0;
    width: 100%;
+   min-width: fit-content;
    min-height: 44px;
 }
 
@@ -528,7 +532,7 @@ body {
 }
 
 .resendCode ion-text {
-   color: #8f1a1d;
+   color: var(--ion-color-primary);
    font-weight: 600;
 }
 
@@ -735,6 +739,24 @@ ion-button {
    margin: 0;
    text-transform: capitalize;
    font-weight: 600;
+   letter-spacing: 0;
+   min-height: 44px;
+}
+
+ion-button.button-default {
+   min-height: auto;
+}
+
+ion-button img {
+   width: 20px;
+}
+
+ion-button .button-inner {
+   gap: 10px !important;
+}
+
+ion-button ion-icon::slotted(ion-icon[slot="start"]) {
+   margin-right: 10px;
 }
 
 ion-button.button-outline {
@@ -745,4 +767,200 @@ ion-button.button-outline {
    display: flex;
 }
 
+.mr-05 {
+   margin-right: 5px;
+}
+
+.px-6 {
+   padding-right: 6px;
+   padding-left: 6px;
+}
+
+
 /* globle end */
+
+/* swiper */
+
+.swiper-pagination {
+   position: unset;
+}
+
+.swiper-pagination-bullet {
+   border: 1px solid var(--ion-color-primary);
+   opacity: 1;
+   background: transparent !important;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+   background: var(--ion-color-primary) !important;
+}
+
+/* Fill segment */
+
+.FillSegment ion-segment-button {
+   color: var(--ion-color-primary);
+   text-transform: capitalize;
+   font-size: 16px;
+   letter-spacing: 0;
+   font-weight: 600;
+}
+
+.FillSegment ion-segment-button::part(indicator) {
+   height: 48px;
+}
+
+.FillSegment ion-segment-button::part(indicator-background) {
+   height: 100%;
+}
+
+.FillSegment ion-segment-button.segment-button-checked {
+   color: #fff;
+}
+
+/* Fill segment end */
+
+/* review card */
+
+.reviewsCard {
+   background-color: #f8f6f4;
+   border-radius: 15px;
+   box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.20);
+   padding: 15px;
+   margin: 0 0 15px;
+}
+
+.reviewDetails {
+   display: flex;
+   gap: 15px;
+}
+
+.reviewThumb {
+   width: 40px;
+   min-width: 40px;
+   height: 40px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   overflow: hidden;
+}
+
+.reviewThumb img {
+   height: 100%;
+   object-fit: cover;
+   width: 100%;
+}
+
+.reviewInfo {
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+}
+
+.reviewTitle {
+   display: flex;
+   justify-content: space-between;
+   gap: 10px;
+   align-items: center;
+}
+
+.reviewName-info {
+   display: flex;
+   flex-direction: column;
+   gap: 5px;
+}
+
+.reviewName-info ion-text {
+   font-size: 16px;
+   font-weight: 600;
+}
+
+.reviewName-info span {
+   font-size: 13px;
+   color: #555;
+}
+
+.ratingStar {
+   display: flex;
+   align-items: center;
+   gap: 5px;
+}
+
+.reviewDescription ion-text {
+   font-size: 14px;
+   line-height: 20px;
+}
+
+/* review card end */
+
+/* recipe card */
+
+.recipeCard {
+   margin: 10px;
+   background: #f8f6f4;
+   border-radius: 15px;
+   box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.20);
+}
+
+.recipeHead {
+   display: flex;
+   gap: 15px;
+   padding: 12px;
+}
+
+.recipeHead .reviewName-info span {
+   color: var(--ion-color-primary);
+}
+
+.recipeMainThumb {
+   width: 100%;
+   line-height: 0;
+   height: 150px;
+}
+
+.recipeMainThumb img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
+
+.recipeDetails {
+   padding: 12px;
+}
+
+.recipeDetails .title {
+   font-size: 16px;
+   display: block;
+   font-weight: 600;
+   text-overflow: ellipsis;
+   white-space: nowrap;
+   overflow: hidden;
+   margin: 0 0 5px;
+}
+
+.recipeDetails .description {
+   display: block;
+   font-size: 14px;
+   margin: 0 0 15px;
+}
+
+.LevelInfo {
+   font-size: 14px;
+}
+
+.lavelRating {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.lavelRating .IconBtn {
+   width: 32px;
+   min-width: 32px;
+   height: 32px !important;
+}
+
+.lavelRating .IconBtn {
+   width: 32px;
+   min-width: 32px;
+   height: 32px !important;
+}
