--- a/src/pages/Products/CartProducts.module.css
+++ b/src/pages/Products/CartProducts.module.css
@@ -1,120 +1,62 @@
-.cartCheckout {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    align-content: center;
-    margin: 1rem;
-}
-
-.cartFooter {
-    border-top: 2px solid rgb(200, 200, 200);
-    background-color: white;
-}
-
-.cartCheckout ion-card-subtitle {
-    font-size: 1.3rem;
-}
-
-.cartItem ion-avatar {
-    height: 4rem;
-    width: 4rem;
-}
-
-.cartSlider:not(:nth-child(1)) {
-    border-top: 2px solid rgb(236, 236, 236);
-}
-
-.cartActions {
-    display: flex;
-    flex-direction: column;
-}
 
 
-.mainhead{
-    font-weight: 400 !important;
-    color: #000 !important;
-    font-size: 16px !important;
-    padding: 0 10px !important;
-}
-
-.paymentlist{
-    padding: 12px;
-    border-bottom:1px solid #e8e8e8;
-}
-
-
-.paymentrow{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.paylogo img{
-    max-width: 50px;
+.ItemSlide ion-label {
+    display: flex !important;
     width: 100%;
+    max-width: 100% !important;
+    align-items: center;
+    gap: 20px;
+    margin: 0;
+    padding: 16px 0;
 }
 
-.paycontent{
+.productDetails {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    overflow: hidden;
+}
+
+.productThumb {
+    min-width: 35px;
+    width: 35px;
+}
+
+.productInfo,
+.priceInfo {
     display: flex;
     flex-direction: column;
-    row-gap: 4px;
-
+    gap: 5px;
+    overflow: hidden;
 }
 
-.paycontent ion-text:first-child{
+.productTitle {
+    font-size: 13px;
     font-weight: 600;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.productCate,
+.productQty {
     font-size: 12px;
-    width: 90px;
-    overflow: hidden; 
-  text-overflow: ellipsis; 
-  white-space: nowrap;
 }
 
-.paycontent ion-text:last-child{
-    color: #b4b4b4;
-    font-size: 10px;
-    letter-spacing: -0.2px;
+.priceInfo {
+    text-align: right;
+    min-width: fit-content;
 }
 
-.pricecontent ion-text:first-child{
+.currentPrice {
     font-weight: 600;
-    font-size: 15px;
+    font-size: 13px;
 }
 
-.pricecontent ion-text:last-child{
-    color: #b4b4b4;
-    font-size: 10px;
-    letter-spacing: -0.2px;
+.oldPrice {
+    font-size: 12px;
+    color: #555;
     text-decoration: line-through;
 }
-
-.pricecontent {
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    row-gap: 4px;
-}
-
-.counteritem ion-button{
-    height: 15px;
-}
-
-.counteritem ion-icon{
-    width: 12px;
-}
-
-.counteritem{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: 10px;
-    padding: 5px;
-    border-radius: 55px;
-    border: 1px solid #E9E9ED
-}
-
-
-
 
 
