--- a/src/pages/Products/Product.module.css
+++ b/src/pages/Products/Product.module.css
@@ -29,7 +29,7 @@
     color: #9a1a0a;
 }
 
-.pTitle{
+.pTitle {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -46,80 +46,20 @@
     line-height: 24px;
 }
 
-.categoryCardContent {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+.ratingTitle {
+    margin-bottom: 10px;
+    display: block;
+    font-size: 14px;
 }
 
-
-
-.categoryCardContent ion-button {
-    font-size: 0.8rem;
-}
-
-.categoryCardContent p {
-    font-size: 1.5rem;
-    padding: 0;
-    margin: 0;
-}
-
-.productPrice {
-    display: flex;
-    flex-direction: row;
-}
-
-.boxcontent{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    row-gap: 0px;
-}
-
-
-.TextContent{
-    display: flex;
-    justify-content: start;
-    column-gap: 10px;
-    align-items: center;
-}
-
-.addButn{
+.addButn {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
 }
 
-
-.reply{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: 5px;
-}
-
-.mainhead{
-    color: #000 !important;
-    padding: 0 10px !important;
-    font-weight: 400 !important;
-}
-
-.report{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: 5px;
-    font-size: 12px;
-    color: #9a1a0a;
-}
-
-.reviewbtn{
-    height: 50px;
-}
-
-
-.RateDesignInner{
+.RateDesignInner {
     font-weight: 600;
     margin: 0;
     padding: 5px 10px;
@@ -130,31 +70,86 @@
     line-height: normal;
 }
 
-.boxcontent h3{
-    font-size: 18px;
-    text-align: start;
-    font-weight: bold;
-
+.moreInfo {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
 }
 
-.ChipDesign{
-    font-weight: 600;
-    margin: 0;
+.moreInfo:last-child {
+    margin-bottom: 0;
+}
+
+.moreInfo ion-text {
+    font-size: 14px;
+}
+
+.moreInfo ion-text:first-child {
+    min-width: 110px;
+}
+
+.chipBadge {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px 20px;
+}
+
+.chipBadge ion-text {
+    background-color: var(--ion-color-primary);
+    padding: 5px 10px 5px 25px;
+    position: relative;
+    color: #fff;
+    display: inline-flex;
     border-radius: 5px;
-    padding: 5px 5px;
-    height: auto;
-    color: #00a94f;
-    background: #e6f6f1;
-    font-size: 12px;
-    line-height: normal;
+    font-size: 14px;
 }
 
-.chefbuttonouter ion-button{
-    width: 100%;
+.chipBadge ion-text:after {
+    content: '';
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+    top: 50%;
+    left: 10px;
+    background: #fff;
+    transform: translateY(-50%);
 }
 
-.iconimg{
-    max-width: 20px;
-    padding-left: 10px;
+.chipBadge ion-text:before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 13px solid transparent;
+    border-left: 13px solid var(--ion-color-primary);
+    border-bottom: 13px solid transparent;
+    right: -10px;
+    top: 0;
 }
 
+.TabContentCard {
+    margin: 0 16px 15px;
+    background: #f8f6f4;
+    border-radius: 15px;
+    box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.20);
+}
+
+.nutritionListBlock {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    padding: 0 16px 10px;
+}
+
+.listIngredients {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
+    border-bottom: 1px solid #c7c7c7;
+}
+
+.nutritionListBlock .listIngredients:last-child {
+    border-bottom: 0;
+}
