--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -4,6 +4,10 @@ body {
    font-family: 'Open Sans', sans-serif !important;
 }
 
+iframe {
+   margin: 0;
+   border: none;
+}
 .w-full {
    width: 100%;
 }
@@ -754,9 +758,9 @@ ion-button.button-default {
    min-height: auto;
 }
 
-ion-button img {
+/* ion-button img {
    width: 20px;
-}
+} */
 
 ion-button .button-inner {
    gap: 10px !important;
@@ -1013,3 +1017,147 @@ ion-button.button-outline {
 }
 
 /* QtyBlock end */
+
+
+.CouponInput {
+   border: 1px solid #ccc;
+   border-radius: 5px;
+   height: 50px;
+}
+.ApplyBtn {
+   position: absolute;
+   right: 0;
+   top: 0;
+}
+.CouponGroup {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   position: relative;
+}
+.BgColor {
+   background: #e8edf7;
+   text-align: center;
+   font-size: 20px;
+   font-weight: 500;
+   color: #3d6fe0;
+}
+.Divider {
+   width: 92%;
+    display: block;
+    height: 1px;
+    background: #000;
+    margin: auto;
+}
+.AddressBlock {
+   display: flex;
+   gap: 10px;
+   border: 1px solid #ccc;
+   padding: 5px;
+   border-radius: 5px;
+}
+.AddressSearch {
+   --box-shadow: none;
+   --border-radius: 10px;
+   padding-inline-start: 0;
+   padding-inline-end: 0;
+   padding-top: 0;
+   padding-bottom: 0;
+}
+.AddressSearch .searchbar-input-container {
+   border: 1px solid #ccc;
+    border-radius: 10px;
+}
+.AddAddress {
+   display: flex;
+   gap: 10px;
+   border-radius: 5px;
+}
+.AddAddress .Address {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   margin-top: -10px;
+}
+.AddressMainBlock {
+   background: #fff;
+   box-shadow: 0px -19px 10px #ccc;
+   border-radius: 15px;
+}
+.FlexCol {
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: flex-start;
+}
+.SlidesRecipes img {
+   width: 100%;
+}
+/* .CustomGap {
+   gap: 10px;
+} */
+.RecipePro img {
+   width: 100%;
+   height: 100%;
+   border-radius: 10px;
+   object-fit: cover;
+   position: relative;
+}
+.RecipePro {
+   height: 100%;
+   width: 100%;
+}
+.TimeingBar {
+   position: absolute;
+   bottom: 20px;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   left: 20px;
+   right: 20px;
+   background: var(--ion-color-primary);
+   padding: 5px;
+   border-radius: 5px;
+   font-size: 12px;
+   color: #fff;
+}
+.ReciRow {
+   display: flex;
+   align-items: center;
+   gap: 5px;
+}
+.RecentUserImg {
+   width: 100%;
+   height: 100px;
+   object-fit: cover;
+   border-radius: 10px;
+}
+
+.BottomBar {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.RecentMeta {
+   display: flex;
+   align-items: center;
+   gap: 15px;
+}
+
+.TitelMeta {
+   display: flex;
+   flex-direction: column;
+   gap: 5px;
+   font-size: 12px;
+}
+.commenbar {
+   display: flex;
+   align-items: center;
+   gap: 3px;
+}
+.FlameFire ion-icon {
+   color: red;
+}
+.TimeMeta ion-icon {
+   color: green;
+}
